Updatd CCS project

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,18 +1,11 @@
 eclipse.preferences.version=1
-encoding//Debug/CMakeFiles/2.8.10.2/CompilerIdC/subdir_rules.mk=UTF-8
-encoding//Debug/CMakeFiles/2.8.10.2/CompilerIdC/subdir_vars.mk=UTF-8
-encoding//Debug/CMakeFiles/2.8.10.2/CompilerIdCXX/subdir_rules.mk=UTF-8
-encoding//Debug/CMakeFiles/2.8.10.2/CompilerIdCXX/subdir_vars.mk=UTF-8
-encoding//Debug/CMakeFiles/TRICAL.dir/src/subdir_rules.mk=UTF-8
-encoding//Debug/CMakeFiles/TRICAL.dir/src/subdir_vars.mk=UTF-8
-encoding//Debug/CMakeFiles/TRICALstatic.dir/src/subdir_rules.mk=UTF-8
-encoding//Debug/CMakeFiles/TRICALstatic.dir/src/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
 encoding//Debug/src/subdir_rules.mk=UTF-8
 encoding//Debug/src/subdir_vars.mk=UTF-8
-encoding//Debug/subdir_rules.mk=UTF-8
-encoding//Debug/subdir_vars.mk=UTF-8
-encoding//Debug/test/subdir_rules.mk=UTF-8
-encoding//Debug/test/subdir_vars.mk=UTF-8
+encoding//Release/makefile=UTF-8
+encoding//Release/objects.mk=UTF-8
+encoding//Release/sources.mk=UTF-8
+encoding//Release/src/subdir_rules.mk=UTF-8
+encoding//Release/src/subdir_vars.mk=UTF-8
